syntax = "proto3";

package spqr;

option go_package = "spqr/proto";

import "google/protobuf/empty.proto";
import "protos/qualified_name.proto";

message ReferenceRelation {
  string name = 1;
  map<string, string> sequenceColumns = 2;
  uint64 schema_version = 3;
  repeated string shardIds = 4;
}

message AutoIncrementEntry {
  string ColName = 1;
  uint64 StartValue = 2;
}

message CreateReferenceRelationsRequest {
  ReferenceRelation relation = 1;
  repeated AutoIncrementEntry entries = 2;
}

message DropReferenceRelationsRequest {
  repeated QualifiedName relations = 1;
}


message ListReferenceRelationsReply {
  repeated ReferenceRelation relations = 1;
}

message SyncReferenceRelationsRequest {
    string shard_id = 1;
    repeated QualifiedName relations = 2;
}

message AlterReferenceRelationStorageRequest {
  QualifiedName relation = 1;
  repeated string shard_ids = 2;
}

service ReferenceRelationsService {
  rpc CreateReferenceRelations(CreateReferenceRelationsRequest) returns (google.protobuf.Empty) {}
  rpc DropReferenceRelations(DropReferenceRelationsRequest) returns (google.protobuf.Empty) {}
  rpc ListReferenceRelations(google.protobuf.Empty) returns (ListReferenceRelationsReply) {}

  rpc AlterReferenceRelationStorage(AlterReferenceRelationStorageRequest) returns (google.protobuf.Empty) {}

  rpc SyncReferenceRelations(SyncReferenceRelationsRequest) returns (google.protobuf.Empty) {} 
}
